# LetterBoxedSolver

./: .gitignore  README.md  dune-project  words.txt
corpuses/: enable.txt  scrabble.txt
lib/: dune  letter_boxed.ml  letter_boxed.mli  trie.ml  trie.mli
test/: dune  letter_boxed_test.ml
test/test_corpuses/: 2.txt
